<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="16dp">

    <ImageView
        android:id="@+id/cart_item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/cart_item_desc_image"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_item_name"
        style="@style/Widget.AppCompat.TextView.Scrollable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/cart_item_padding"
        android:paddingEnd="@dimen/cart_item_padding"
        android:text="@string/cart_item_placeholder_item_name"
        android:textSize="@dimen/cart_item_name_size"
        app:layout_constraintEnd_toStartOf="@id/cart_item_price"
        app:layout_constraintStart_toEndOf="@id/cart_item_image"
        app:layout_constraintTop_toTopOf="@id/cart_item_image" />

    <TextView
        android:id="@+id/cart_item_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/cart_item_padding"
        android:text="@string/cart_item_placeholder_category"
        app:layout_constraintEnd_toStartOf="@id/cart_item_price"
        app:layout_constraintStart_toEndOf="@id/cart_item_image"
        app:layout_constraintTop_toBottomOf="@id/cart_item_name"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cart_item_extra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/cart_item_padding"
        android:text="@string/cart_item_placeholder_extra"
        app:layout_constraintEnd_toStartOf="@id/cart_item_price"
        app:layout_constraintStart_toEndOf="@id/cart_item_image"
        app:layout_constraintTop_toBottomOf="@id/cart_item_category"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cart_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_item_placeholder_price"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>